tests/baselines/reference/uncaughtCompilerError2.errors.txt
==== tests/cases/compiler/uncaughtCompilerError2.ts (1 errors) ====
    function getObj() {
       ().toString();
        ~
!!! uncaughtCompilerError2.ts(2,5): error TS1003: Identifier expected.
    }
    